test/sc++/error/mesh-ptr-field.scpp
../../scc/error/mesh-ptr-field.sc